--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             or just getting started in the world of Valorant, this app is designed to enhance your knowledge and
             enjoyment of the game.</p>
           <ul class="status">
-            <li>Ongoing</li>
+            <li>Live</li>
           </ul>
           <!-- <a href="https://play.google.com/store/apps/" target="_blank"><img
               src="assets/img/google-play-badge.svg" alt=""></a> -->
@@ -155,7 +155,25 @@
           <img src="assets/img/itls-sample.png" alt="" class="img-fluid">
         </div>
       </div>
+
+      <div class="row jd-sample-work-container d-flex justify-content-between">
+        <div class="col-12 col-sm-5 order-2 sample-work-details align-self-center">
+          <h4 class="title">Badminton Score Counter</h4>
+          <p class="description">Badminton Score Counter is a straightforward and user-friendly application designed for
+            badminton enthusiasts and players to keep track of scores during matches. Whether you're playing singles or
+            doubles, this app simplifies the scoring process, ensuring that you can focus on the game.</p>
+          <ul class="status">
+            <li>Live</li>
+
+          </ul>
+        </div>
+        <div class="col-12 col-sm-6 order-1">
+          <img src="assets/img/badminton-sample.png" alt="" class="img-fluid">
+        </div>
+      </div>
+
   </section>
+
 
   <section class="jd-footer" id="contact">
     <div class="container">
