--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Amjad Aziz | Mobile Developer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -118,8 +121,8 @@
           <ul class="status">
             <li>Live</li>
           </ul>
-          <!-- <a href="https://play.google.com/store/apps/" target="_blank"><img
-              src="assets/img/google-play-badge.svg" alt=""></a> -->
+          <a href="https://github.com/Amjadaziz10/valguide-flutter" target="_blank"><img
+              src="assets/img/github-badge.png" width="150" alt=""></a>
         </div>
         <div class="col-12 col-sm-6 order-2">
           <img src="assets/img/valguide-sample.png" alt="" class="img-fluid">
@@ -136,6 +139,8 @@
             <li>Ongoing</li>
 
           </ul>
+          <a href="https://github.com/Amjadaziz10/brotani-mobile" target="_blank"><img src="assets/img/github-badge.png"
+              width="150" alt=""></a>
         </div>
         <div class="col-12 col-sm-6 order-1">
           <img src="assets/img/brotani-sample.png" alt="" class="img-fluid">
@@ -150,6 +155,8 @@
           <ul class="status">
             <li>Inactive</li>
           </ul>
+          <a href="https://github.com/PS215/Intelligent-Traffic-Lights-System" target="_blank"><img
+              src="assets/img/github-badge.png" width="150" alt=""></a>
         </div>
         <div class="col-12 col-sm-6 order-2">
           <img src="assets/img/itls-sample.png" alt="" class="img-fluid">
@@ -166,6 +173,8 @@
             <li>Live</li>
 
           </ul>
+          <a href="https://github.com/Amjadaziz10/badminton-score-counter" target="_blank"><img
+              src="assets/img/github-badge.png" width="150" alt=""></a>
         </div>
         <div class="col-12 col-sm-6 order-1">
           <img src="assets/img/badminton-sample.png" alt="" class="img-fluid">
