--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
           <h5>Things I use for development:</h5>
-          <p>Flutter / Kotlin / Github / VS Code / Android Studio / Figma</p>
+          <p>Flutter / Kotlin / Git / VS Code / Android Studio / Figma</p>
         </div>
       </div>
     </div>
