--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="jdNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -75,9 +75,9 @@
       <div class="row text-center">
         <div class="col">
           <a class="social-link" href="https://www.linkedin.com/in/muhammad-amjad-aziz/" target="_blank"><i
-              class="p-3 fab fa-linkedin"></i></a>
-          <a class="social-link" href="https://github.com/jermainedilao" target="_blank"><i
-              class="p-3 fab fa-github"></i></a>
+              class="p-3 fab fa-linkedin fa-2x"></i></a>
+          <a class="social-link" href="https://github.com/amjadaziz10" target="_blank"><i
+              class="p-3 fab fa-github fa-2x"></i></a>
         </div>
       </div>
     </div>
@@ -98,7 +98,7 @@
 
 
           <h5>Things I use for development:</h5>
-          <p>Flutter / Kotlin / Git / VS Code / Android Studio / Figma</p>
+          <p>Flutter / Kotlin / Git / GitHub / VS Code / Android Studio / Figma</p>
         </div>
       </div>
     </div>
@@ -178,6 +178,21 @@
         </div>
         <div class="col-12 col-sm-6 order-1">
           <img src="assets/img/badminton-sample.png" alt="" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row jd-sample-work-container d-flex justify-content-between">
+        <div class="col-12 col-sm-5 order-2 sample-work-details align-self-center">
+          <h4 class="title">E-Brent</h4>
+          <p class="description">Simplify your campus commute with our e-Bike Rent App. Find, unlock, and ride electric
+            bikes stationed around campus with ease. Enjoy real-time bike availability, secure payments, and 24/7
+            support. Ride green and save time!</p>
+          <ul class="status">
+            <li>Inactive</li>
+          </ul>
+        </div>
+        <div class="col-12 col-sm-6 order-2">
+          <img src="assets/img/ebrent-sample.png" alt="" class="img-fluid">
         </div>
       </div>
 
